# undicht_0.38

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt
core/: CMakeLists.txt
core/include/: core.h
examples/: CMakeLists.txt
examples/Cell/: CMakeLists.txt  main.cpp
examples/Cell/src/: cell.h  chunk.h  material.cpp  material.h  material_register.cpp  material_register.h
examples/Cell/src/camera/: camera_control.cpp  camera_control.h
examples/Cell/src/chunks/: cell.cpp  cell.h  draw_chunk.cpp  draw_chunk.h  edit_chunk.cpp  edit_chunk.h  fast_access_chunk.cpp  fast_access_chunk.h
examples/Cell/src/math/: cell_math.cpp  cell_math.h
examples/Cell/src/player/: player.cpp  player.h
examples/Cell/src/rendering/: cell_final_renderer.cpp  cell_final_renderer.h  cell_final_shader.glsl  cell_gbuffer.cpp  cell_gbuffer.h  cell_geometry_renderer.cpp  cell_geometry_renderer.h  cell_geometry_shader.glsl  cell_light_renderer.cpp  cell_light_renderer.h  cell_light_shader.glsl  cell_renderer.cpp  cell_renderer.h  cell_shader.glsl  chunk_buffer.cpp  chunk_buffer.h  texture_atlas.cpp  texture_atlas.h
examples/Cell/src/rendering/final/: final_cell_shader.glsl  final_renderer.cpp  final_renderer.h
examples/Cell/src/world/: cell.cpp  cell.h  chunk.cpp  chunk.h  chunk_optimization.cpp  chunk_optimization.h  world.cpp  world.h  world_chunk.cpp  world_chunk.h
examples/Cell/src/worldgen/: world_file.cpp  world_file.h  world_generator.cpp  world_generator.h
examples/DeferredShading/: CMakeLists.txt  main.cpp
examples/DeferredShading/src/: camera_control.cpp  camera_control.h  final_renderer.cpp  final_renderer.h  final_shader.glsl  gbuffer_renderer.cpp  gbuffer_renderer.h  gbuffer_shader.glsl  light_renderer.cpp  light_renderer.h  light_shader.glsl  scene.cpp  scene.h
examples/HelloWorld/: CMakeLists.txt  main.cpp
examples/HelloWorld/res/: shader.glsl
examples/Noise/: CMakeLists.txt  main.cpp
examples/Noise/src/: noise_shader.glsl
examples/et1/: CMakeLists.txt  main.cpp
examples/et1/src/lin_equations/: linear_equations.h
examples/et1/src/user_interface/: button.cpp  button.h  ui_base.cpp  ui_base.h  ui_element.cpp  ui_element.h
examples/src/: main.cpp
graphics/: CMakeLists.txt
graphics/include/: graphics_core.h
graphics/include/core/: frame_buffer.h  graphics_core.h  renderer.h  shader.h  texture.h  uniform.h  vertex_buffer.h
graphics/include/window/: window.h
graphics/src/: graphics_core.cpp
graphics/src/camera/: camera_3d.cpp  camera_3d.h  perspective_camera_3d.cpp  perspective_camera_3d.h
graphics/src/core/gl33/: gl33_frame_buffer.cpp  gl33_frame_buffer.h  gl33_renderer.cpp  gl33_renderer.h  gl33_shader.cpp  gl33_shader.h  gl33_texture.cpp  gl33_texture.h  gl33_tools.cpp  gl33_tools.h  gl33_uniform.cpp  gl33_uniform.h  gl33_vertex_buffer.cpp  gl33_vertex_buffer.h
graphics/src/core/glfw_gl33/: glfw_gl33_graphics_core.cpp  glfw_gl33_graphics_core.h
graphics/src/deferred_shading/: final_renderer.cpp  final_renderer.h  final_shader.glsl  gbuffer_renderer.cpp  gbuffer_renderer.h  geometry_buffer.cpp  geometry_buffer.h  light.dae  light_renderer.cpp  light_renderer.h  light_shader.glsl
graphics/src/font_rendering/: font.cpp  font.h  font_renderer.cpp  font_renderer.h  font_shader.glsl
graphics/src/vector_graphics/: circle_shader.glsl  line_shader.glsl  vg_renderer.cpp  vg_renderer.h
graphics/src/window/glfw/: glfw_window.cpp  glfw_window.h
tools/: CMakeLists.txt
tools/src/: buffer_layout.cpp  buffer_layout.h  event_logger.cpp  event_logger.h  memory_watcher.cpp  memory_watcher.h  note.cpp  note.h  shared.h  shared_id.cpp  shared_id.h  string_tools.cpp  string_tools.h  time.cpp  time.h  types.cpp  types.h  undicht_thread.h
tools/src/files/: file.cpp  file.h
tools/src/files/fonts/: ttfont_file.cpp  ttfont_file.h
tools/src/files/model_loading/: image_loader.cpp  image_loader.h  model_loader.cpp  model_loader.h
tools/src/files/model_loading/collada/: collada_file.cpp  collada_file.h
tools/src/files/xml/: xml_file.cpp  xml_file.h
tools/src/geometry/: geometry.cpp  geometry.h
tools/src/math/: math_tools.h  orientation_3d.cpp  orientation_3d.h  perspective_projection.h
user_input/: CMakeLists.txt
user_input/include/: key_ids.cpp  key_ids.h  key_input.h  mouse_input.h
user_input/src/glfw/: glfw_key_ids.cpp  glfw_key_ids.h  glfw_key_input.cpp  glfw_key_input.h  glfw_mouse_input.cpp  glfw_mouse_input.h
